--- a/Week07/Day-04/reddit-project/package.json
+++ b/Week07/Day-04/reddit-project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "method-override": "^3.0.0",
     "mysql": "^2.16.0"
   }
 }
